[package]
name = "tinyrenderer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
image = "0.23.14"
nalgebra = "0.30.1"
ndarray = "0.15.4"
obj-rs = "0.7.0"
pprof =  { version = "0.6.2", features = ["flamegraph"] }
show-image = { version = "0.10.1", features = ["image"] }
wavefront_obj = "10.0.0"
rayon = "1.5.1"
rand = "0.8.4"

[profile.release]
debug = true