[package]
name = "tinyrenderer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
image = "0.23.14"
nalgebra = "0.30.1"
ndarray = "0.15.4"
obj-rs = "0.7.0"
# pprof =  { version = "0.6.2", features = ["flamegraph"] }
wavefront_obj = "10.0.0"
rayon = "1.5.1"
rand = "0.8.4"
wgpu = "0.12.0"
winit = "0.26.1"
log = "0.4"
pollster = "0.2.5"
env_logger = "0.9.0"
bytemuck = { version = "1.7.3", features = [ "derive" ] }
cgmath = "0.18.0"

[profile.release]
debug = true